Better nav bar styling

--- a/src/client/assets/styles/standard.scss
+++ b/src/client/assets/styles/standard.scss
@@ -40,7 +40,7 @@ body {
 
 .nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   padding: 0;
   margin: 0;
   margin-top: 20px;
@@ -48,6 +48,10 @@ body {
 
   .nav-item-wrapper {
     list-style: none;
+
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
 
     .nav-item {
       text-decoration: none;
