--- a/src/client/assets/styles/standard.scss
+++ b/src/client/assets/styles/standard.scss
@@ -3,17 +3,11 @@ $primary-background: #fff;
 $primary-text-color: #222;
 
 // Font
-$font-family: 'Roboto', sans-serif;
+$font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantrell, "Open Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$font-size: 14.5px;
+$font-weight: 400;
 
 $fa-font-path: "../fa/webfonts";
-
-@import './colors.scss';
-@import './root-header.scss';
-@import './loading.scss';
-@import './nav.scss';
-@import './pages.scss';
-@import './links.scss';
-@import './headers.scss';
 
 html {
   height: 100vh;
@@ -24,7 +18,8 @@ body {
   color: $primary-text-color;
   background-color: $primary-background-color;
   font-family: $font-family;
-  font-size: 16px;
+  font-size: $font-size;
+  font-weight: $font-weight;
   margin: 0;
   height: 100%;
   width: 100%;
@@ -43,59 +38,10 @@ body {
   min-width: 0;
   overflow: auto;
 
-  .body {
+  &>.body {
     height: 100%;
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
-  }
-}
-
-.home {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  i {
-    margin-top: 30px;
-    font-size: 50px;
-  }
-  div {
-    margin-top: 30px;
-  }
-}
-
-a {
-  color: $link-color;
-  text-decoration: none;
-}
-
-// Default focus styling
-*:focus-visible {
-  transition: none;
-  box-shadow: 0 0 0 1px $link-color inset;
-  outline: none;
-}
-
-input, textarea, button { font-family: inherit; font-size: inherit; box-sizing: border-box; }
-
-input[disabled] {
-  color: lighten($primary-text-color, 15)
-}
-
-.root-loading-wrapper {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  .circle-loader {
-    margin-bottom: 20px;
-  }
-
-  .text {
-    text-align: center;
   }
 }
