--- a/src/client/assets/styles/standard.scss
+++ b/src/client/assets/styles/standard.scss
@@ -16,7 +16,7 @@ html {
 
 body {
   color: $primary-text-color;
-  background-color: $primary-background-color;
+  background-color: $primary-background;
   font-family: $font-family;
   font-size: $font-size;
   font-weight: $font-weight;
@@ -30,18 +30,50 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
 }
 
-.body-wrapper {
-  flex: 1 1 0;
-  min-width: 0;
-  overflow: auto;
+.app {
+  width: 800px;
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 
-  &>.body {
-    height: 100%;
+  &>.title {
     width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
+    font-size: 40px;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+
+  .links {
+    width: 400px;
+    max-width: 100%;
+    border: 1px solid #ccc;
+    padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+
+    &>.title {
+      font-size: 20px;
+      margin-bottom: 10px;
+    }
+  }
+
+  .health-check {
+    width: 400px;
+    max-width: 100%;
+    border: 1px solid #ccc;
+    padding: 5px;
+    border-radius: 5px;
+
+    &>.title {
+      font-size: 20px;
+      margin-bottom: 10px;
+    }
   }
 }
